16/05/2018 16:48 - Teste concluído com sucesso da classe Dao/Estado

--- a/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
+++ b/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
@@ -151,7 +151,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Dao\Cidade.cs" />
     <Compile Include="Dao\Estado.cs" />
-    <Compile Include="Database\conexao.cs" />
+    <Compile Include="Database\Conexao.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
