--- a/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
+++ b/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
@@ -148,7 +148,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PublicoController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Dao\Cidade.cs" />
     <Compile Include="Dao\Estado.cs" />
@@ -194,20 +194,20 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Login.cshtml" />
-    <Content Include="Views\Home\formCadastroEndereco.cshtml" />
-    <Content Include="Views\Home\formCadastroPessoa.cshtml" />
-    <Content Include="Views\Home\formCadastroUsuario.cshtml" />
-    <Content Include="Views\Home\formCidadesEstados.cshtml" />
+    <Content Include="Views\Publico\About.cshtml" />
+    <Content Include="Views\Publico\Contact.cshtml" />
+    <Content Include="Views\Publico\Index.cshtml" />
+    <Content Include="Views\Publico\Login.cshtml" />
+    <Content Include="Views\Publico\formCadastroEndereco.cshtml" />
+    <Content Include="Views\Publico\formCadastroPessoa.cshtml" />
+    <Content Include="Views\Publico\formCadastroUsuario.cshtml" />
+    <Content Include="Views\Publico\formCidadesEstados.cshtml" />
+    <Content Include="Views\Privado\formCadastroFerramenta.cshtml" />
+    <Content Include="Views\Privado\PaginaUsuario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Login\" />
-    <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
