--- a/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
+++ b/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
@@ -150,7 +150,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Dao\Cidade.cs" />
+    <Compile Include="Dao\Endereco.cs" />
     <Compile Include="Dao\Estado.cs" />
+    <Compile Include="Dao\Pessoa.cs" />
+    <Compile Include="Dao\PessoaFisica.cs" />
     <Compile Include="Dao\Usuario.cs" />
     <Compile Include="Database\Conexao.cs" />
     <Compile Include="Global.asax.cs">
@@ -199,12 +202,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\formCadastroEndereco.cshtml" />
     <Content Include="Views\Home\formCadastroPessoa.cshtml" />
-    <Content Include="Views\Home\formCadastroUsuario.cshtml" />
     <Content Include="Views\Home\formCidadesEstados.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\EfetuaLogin.cshtml" />
+    <Content Include="Views\Home\CadastraPessoa.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
