--- a/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
+++ b/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
@@ -149,6 +149,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PrivadasController.cs" />
     <Compile Include="Dao\Cidade.cs" />
     <Compile Include="Dao\Endereco.cs" />
     <Compile Include="Dao\Estado.cs" />
@@ -206,12 +207,12 @@
     <Content Include="Views\Home\formCadastroPessoa.cshtml" />
     <Content Include="Views\Home\formCidadesEstados.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
-    <Content Include="Views\Home\EfetuaLogin.cshtml" />
     <Content Include="Views\Home\CadastroSucesso.cshtml" />
+    <Content Include="Views\Privadas\CadastroProduto.cshtml" />
+    <Content Include="Views\Privadas\PaginaUsuario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Privadas\" />
     <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
