--- a/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
+++ b/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
@@ -206,17 +206,19 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\formCadastroPessoa.cshtml" />
-    <Content Include="Views\Home\formCidadesEstados.cshtml" />
+    <Content Include="Views\Home\formEndereco.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\CadastroSucesso.cshtml" />
     <Content Include="Views\Privadas\CadastroProduto.cshtml" />
     <Content Include="Views\Privadas\PaginaUsuario.cshtml" />
-    <Content Include="Views\Home\EfetuaLogin.cshtml" />
+    <Content Include="Views\Privadas\PaginaLogOut.cshtml" />
+    <Content Include="Views\Privadas\MeusProdutos.cshtml" />
+    <Content Include="Views\Home\formCidades.cshtml" />
+    <Content Include="Views\Home\formEstado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Login\" />
-    <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
