--- a/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
+++ b/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
@@ -156,14 +156,17 @@
     <Compile Include="Dao\Estado.cs" />
     <Compile Include="Dao\Pessoa.cs" />
     <Compile Include="Dao\PessoaFisica.cs" />
+    <Compile Include="Dao\Produto.cs" />
     <Compile Include="Dao\Usuario.cs" />
     <Compile Include="Database\Conexao.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CategoriaModel.cs" />
     <Compile Include="Models\CidadeModel.cs" />
     <Compile Include="Models\EnderecoModel.cs" />
     <Compile Include="Models\EstadoModel.cs" />
+    <Compile Include="Models\ProdutoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -218,7 +221,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Login\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
