--- a/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
+++ b/AlugaTooC-Sharp/AlugaTooC-Sharp.csproj
@@ -218,6 +218,8 @@
     <Content Include="Views\Privadas\MeusProdutos.cshtml" />
     <Content Include="Views\Home\formCidades.cshtml" />
     <Content Include="Views\Home\formEstado.cshtml" />
+    <Content Include="Views\Home\CasaEJardim.cshtml" />
+    <Content Include="Views\Home\MetalEMecanica.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
